fixed temperature update timer mutliplication bug and centered time subhead text alignement

--- a/src/app/bulb-page/bulb-page.component.css
+++ b/src/app/bulb-page/bulb-page.component.css
@@ -13,7 +13,7 @@
   justify-content: center;
   width: 50%;
   max-width: 400px;
-  margin: 50px auto;
+  margin: 70px auto;
 
 }
 
