--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -32,3 +32,7 @@ figure {
 svg,figure {
   margin: 0 auto;
 }
+
+.time-indicator {
+  text-align: center;
+}
